# foolish_admin

./: Dockerfile  README.md  Solution.md  docker-compose.yml  gen_flag  pyproject.toml  sqlite.db
foolish_admin/: __init__.py  config.py  db.py  gen_flag.py  main.py
foolish_admin/templates/: about.html  admin.html  index.html
